--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   <div class="container">
     <header>
       <div class="title" role="banner">
-        <div class="logo" aria-hidden="true">https://media.licdn.com/dms/image/v2/D5603AQHItpL7SzbGQg/profile-displayphoto-shrink_200_200/profile-displayphoto-shrink_200_200/0/1721745056415?e=1762992000&v=beta&t=AHV9WiVxaoGJtxGHreemEZcsGHWBPvqW1R1oE9nGaMc</div>
+        <div class="logo" aria-hidden="true">💼</div>
         <div>
           <h1>AI Career Tools</h1>
           <div class="subtitle">Hand‑picked tools for <strong>Resume Building</strong>, <strong>Interview Prep</strong>, and <strong>ATS Tracking</strong>.</div>
